--- a/src/text-shadow/style.scss
+++ b/src/text-shadow/style.scss
@@ -1,8 +1,53 @@
-body {
-  margin: 10px;
-  padding: 0;
+@import '../common';
+@import '../variables';
+
+@function black($alpha: 1) {
+  @return rgba(0, 0, 0, $alpha);
 }
 
-body * {
-  box-sizing: border-box;
+body {
+  background: darken($not-that-white, 0.9);
+  // background: $not-that-white;
+}
+
+#text-shadow {
+  position: relative;
+  font-size: 126px;
+  font-weight: 300;
+  text-transform: uppercase;
+  background: transparent;
+  color: $not-that-white;
+  letter-spacing: 8px;
+  transform-origin: center;
+  &:before {
+    content: attr(data-text);
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    opacity: 1;
+    width: 100%;
+    height: 100%;
+    color: transparent;
+    text-transform: inherit;
+    font-size: inherit;
+    font-weight: inherit;
+    z-index: -1;
+    text-shadow: 1.6px 0.2px 0 black(0.3), 3px -0.6px 5px black(0.25),
+      6px -4px 10px black(0.2), 10px -6px 15px black(0.1),
+      15px -8px 20px black(0.07), 20px -10px 30px black(0.05);
+
+    animation: 5500ms fadeIn ease-in-out forwards;
+  }
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+    transform: translate(calc(-50% - 3.5px), calc(-50% + 3.5px));
+  }
+  to {
+    opacity: 1;
+    transform: translate(-50%, -50%);
+  }
 }
