--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -1,3 +1,6 @@
 $not-that-white: rgb(250, 250, 250);
 $dark-blue: rgb(10, 50, 70);
 $green: rgb(40, 120, 40);
+
+$pastel-blue: rgb(40, 110, 201);
+$pastel-pink: rgb(240, 86, 171);
