--- a/src/_common.scss
+++ b/src/_common.scss
@@ -1,3 +1,5 @@
+@import './variables';
+
 body {
   font-family: Helvetica, Arial, sans-serif;
   margin: 0;
@@ -18,6 +20,24 @@ h1,
 h2,
 h3 {
   font-weight: 300;
+}
+
+.btn {
+  padding: 15px;
+  background: $green;
+  color: white;
+  display: block;
+  box-shadow: 0 1px 4px -1px rgba(0, 0, 0, 0.5), 0 3px 8px -2px rgba(0, 0, 0, 0.5);
+  transition: background 150ms $ease-out-bezier;
+  border: none;
+  margin: 7.5px;
+  border-radius: 2px;
+  font-size: 18px;
+  font-weight: 300;
+  &:hover,
+  &:focus {
+    background: lighten($green, 3);
+  }
 }
 
 .wrapper {
