Notifications logic working :)

--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -3,6 +3,7 @@ $dark-blue: rgb(10, 50, 70);
 $green: rgb(27, 136, 27);
 
 $pastel-blue: rgb(40, 110, 201);
+$pastel-red: rgb(223, 68, 68);
 $pastel-pink: rgb(240, 86, 171);
 
 $ease-out-bezier: cubic-bezier(0.25, 0.8, 0.25, 1);
