--- a/src/_common.scss
+++ b/src/_common.scss
@@ -24,11 +24,12 @@ h3 {
 
 .btn {
   padding: 15px;
-  background: $green;
+  background-color: $green;
   color: white;
+  cursor: pointer;
   display: block;
   box-shadow: 0 1px 4px -1px rgba(0, 0, 0, 0.5), 0 3px 8px -2px rgba(0, 0, 0, 0.5);
-  transition: background 150ms $ease-out-bezier;
+  transition: background-color 500ms $ease-out-bezier;
   border: none;
   margin: 7.5px;
   border-radius: 2px;
@@ -36,7 +37,7 @@ h3 {
   font-weight: 300;
   &:hover,
   &:focus {
-    background: lighten($green, 3);
+    background-color: lighten($green, 3);
   }
 }
 
