--- a/src/notification/style.scss
+++ b/src/notification/style.scss
@@ -4,15 +4,18 @@
 .notification {
   position: fixed;
   right: 15px;
-  bottom: 15px;
+  bottom: 10px;
   display: flex;
-  background: $green;
-  color: white;
+  align-items: flex-start;
+  background: white;
+  color: #333;
+  border-bottom: none;
   pointer-events: all;
   overflow: hidden;
-  border-radius: 2px;
+  border-radius: 3px;
   will-change: transform;
-  @include box-shadow(3);
+  transition: transform 350ms $ease-out-bezier, opacity 400ms $ease-out-bezier;
+  @include box-shadow(4);
 
   > div {
     flex-grow: 1;
@@ -25,10 +28,12 @@
 
   > button {
     border: none;
-    width: 40px;
+    width: 29px;
+    height: 29px;
+    border-radius: 3px 0 3px 3px;
     padding: 0;
-    background-color: $pastel-blue;
-    transition: background-color 150ms $ease-out-bezier;
+    background-color: $pastel-red;
+    transition: background-color 500ms $ease-out-bezier;
     position: relative;
     cursor: pointer;
     &:before,
@@ -49,7 +54,7 @@
     }
 
     &:hover {
-      background-color: lighten($pastel-blue, 3);
+      background-color: lighten($pastel-red, 3);
     }
   }
 }
