--- a/src/swipe-panes/style.scss
+++ b/src/swipe-panes/style.scss
@@ -1,2 +1,21 @@
 @import '../common';
 @import '../variables';
+
+.panes {
+  position: relative;
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
+}
+.pane {
+  position: absolute;
+  width: 100%;
+  height: 100vh;
+  overflow: scroll;
+  top: 0;
+  left: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 10px 15px;
+}
