--- a/src/notification/style.scss
+++ b/src/notification/style.scss
@@ -3,8 +3,10 @@
 
 .notification {
   position: fixed;
-  right: 15px;
+  right: 0;
   bottom: 10px;
+  margin-left: 15px;
+  margin-right: 15px;
   display: flex;
   align-items: flex-start;
   background: white;
@@ -19,7 +21,7 @@
 
   > div {
     flex-grow: 1;
-    padding: 0 15px;
+    padding: 0 30px 0 15px;
   }
 
   p {
@@ -27,6 +29,9 @@
   }
 
   > button {
+    position: absolute;
+    right: 0;
+    top: 0;
     border: none;
     width: 29px;
     height: 29px;
@@ -34,7 +39,6 @@
     padding: 0;
     background-color: $pastel-red;
     transition: background-color 500ms $ease-out-bezier;
-    position: relative;
     cursor: pointer;
     &:before,
     &:after {
