--- a/src/swipe-panes/style.scss
+++ b/src/swipe-panes/style.scss
@@ -10,12 +10,12 @@
 .pane {
   position: absolute;
   width: 100%;
-  height: 100vh;
-  overflow: scroll;
+  height: 100%;
+  overflow: auto;
   top: 0;
   left: 0;
   display: flex;
   flex-direction: column;
-  align-items: center;
   padding: 10px 15px;
+  align-items: center;
 }
