--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -1,10 +1,10 @@
-$not-that-white: rgb(250, 250, 250);
-$dark-blue: rgb(10, 50, 70);
-$green: rgb(27, 136, 27);
+$not-that-white: #fafafa;
+$dark-blue: #182a35;
+$flat-green: #1b583a;
 
-$pastel-blue: rgb(40, 110, 201);
-$pastel-red: rgb(223, 68, 68);
-$pastel-pink: rgb(240, 86, 171);
+$pastel-blue: #286ec9;
+$pastel-red: #df4444;
+$pastel-pink: #f056ab;
 
 $ease-out-bezier: cubic-bezier(0.25, 0.8, 0.25, 1);
 
