--- a/src/_common.scss
+++ b/src/_common.scss
@@ -1,7 +1,8 @@
+@import url('https://fonts.googleapis.com/css?family=Lato:300,400,700&display=swap');
 @import './variables';
 
 body {
-  font-family: Helvetica, Arial, sans-serif;
+  font-family: 'Lato', Helvetica, Arial, sans-serif;
   margin: 0;
   padding: 0;
   width: 100%;
@@ -24,17 +25,18 @@ h3 {
 
 .btn {
   padding: 15px;
-  background-color: $flat-green;
+  background-color: $teal;
   color: white;
   cursor: pointer;
   display: block;
-  box-shadow: 0 1px 4px -1px rgba(0, 0, 0, 0.5), 0 3px 8px -2px rgba(0, 0, 0, 0.5);
+  box-shadow: 0 1px 4px -1px rgba(0, 0, 0, 0.5),
+    0 3px 8px -2px rgba(0, 0, 0, 0.5);
   transition: background-color 500ms $ease-out-bezier;
   border: none;
   margin: 7.5px;
   border-radius: 2px;
   font-size: 18px;
-  font-weight: 300;
+  font-weight: 400;
   &:hover,
   &:focus {
     background-color: lighten($flat-green, 3);
