--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -40,3 +40,6 @@ $ease-out-bezier: cubic-bezier(0.25, 0.8, 0.25, 1);
     box-shadow: 0 19px 38px rgba(0, 0, 0, 0.3), 0 15px 12px rgba(0, 0, 0, 0.22);
   }
 }
+@mixin text-shadow() {
+  text-shadow: -.5px .5px .5px rgba(#000, 0.5), -1px 1px 4px rgba(#000, 0.4);
+}
